chore: copy library bundles to demo dist for CDN usage on Netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm --workspace library run build && npm --workspace examples/vanilla run build"
+  command = "npm --workspace library run build && npm --workspace examples/vanilla run build && cp -f library/dist/click2call.* examples/vanilla/dist/"
   publish = "examples/vanilla/dist"
 
 [[headers]]
