--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [[headers]]
   for = "/click2call.*.js"
   [headers.values]
-    cache-control = "public, max-age=31536000, immutable"
+    cache-control = "public, max-age=0, must-revalidate"
 
 [[headers]]
   for = "/assets/*"
